5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4384/executions/1596_1015.log
== TEST (2019-04-02 16:10:30) 
-- CODE:
a=int(input("valor"))
b=int(input("valor"))
c=int(input("valor"))

print(min(a,b,c)
print(a+b+c)-min(a,b,c)-max(a,b,c)
print(max(a,b,c))

-- ERROR:
File "XXXX", line 6
    print(a+b+c)-min(a,b,c)-max(a,b,c)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:10:39) 
-- CODE:
a=int(input("valor"))
b=int(input("valor"))
c=int(input("valor"))

print(min(a,b,c)
print(a+b+c)-min(a,b,c)-max(a,b,c)
print(max(a,b,c))

-- ERROR:
File "XXXX", line 6
    print(a+b+c)-min(a,b,c)-max(a,b,c)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:15:11) 
-- CODE:
a=int(input("valor"))
b=int(input("valor"))
c=int(input("valor"))

print(min(a,b,c)
print(a+b+c)-min(a,b,c)-max(a,b,c)
print(max(a,b,c))

-- ERROR:
File "XXXX", line 6
    print(a+b+c)-min(a,b,c)-max(a,b,c)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:17:13) 
-- CODE:
a=int(input("valor"))
b=int(input("valor"))
c=int(input("valor"))

print(min(a,b,c)
print((a+b+c)-min(a,b,c)-max(a,b,c))
print(max(a,b,c))

-- ERROR:
File "XXXX", line 6
    print((a+b+c)-min(a,b,c)-max(a,b,c))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:18:28) 
-- CODE:
a=int(input("valor"))
b=int(input("valor"))
c=int(input("valor"))

print(min(a,b,c)
print((a+b+c)-min(a,b,c)-max(a,b,c))
print(max(a,b,c))

-- ERROR:
File "XXXX", line 6
    print((a+b+c)-min(a,b,c)-max(a,b,c))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:38:51) 
-- CODE:
a=int(input("valor"))
b=int(input("valor"))
c=int(input("valor"))

print(min(a,b,c)
print((a+b+c)-min(a,b,c)-max(a,b,c))
print(max(a,b,c))

-- ERROR:
File "XXXX", line 6
    print((a+b+c)-min(a,b,c)-max(a,b,c))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:40:39) 
-- CODE:
a=int(input("valor"))
b=int(input("valor"))
c=int(input("valor"))

print(min(a,b,c)
print((a+b+c)-min(a,b,c)-max(a,b,c))
print(max(a,b,c))

-- ERROR:
File "XXXX", line 6
    print((a+b+c)-min(a,b,c)-max(a,b,c))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:40:40) 
-- CODE:
a=int(input("valor"))
b=int(input("valor"))
c=int(input("valor"))

print(min(a,b,c)
print((a+b+c)-min(a,b,c)-max(a,b,c))
print(max(a,b,c))

-- EXECUTION TIME:
0.180594
-- ERROR:
  File "/home/codebench/codes/1596/1015/main.py", line 6
    print((a+b+c)-min(a,b,c)-max(a,b,c))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:40:42) 
-- CODE:
a=int(input("valor"))
b=int(input("valor"))
c=int(input("valor"))

print(min(a,b,c)
print((a+b+c)-min(a,b,c)-max(a,b,c))
print(max(a,b,c))

-- ERROR:
File "XXXX", line 6
    print((a+b+c)-min(a,b,c)-max(a,b,c))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:48:13) 
-- CODE:
a=int(input("valor"))
b=int(input("valor"))
c=int(input("valor"))

print (min(a,b,c)
print ((a+b+c)-min(a,b,c)-max(a,b,c))
print(max(a,b,c))

-- EXECUTION TIME:
0.155282
-- ERROR:
  File "/home/codebench/codes/1596/1015/main.py", line 6
    print ((a+b+c)-min(a,b,c)-max(a,b,c))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:48:14) 
-- CODE:
a=int(input("valor"))
b=int(input("valor"))
c=int(input("valor"))

print (min(a,b,c)
print ((a+b+c)-min(a,b,c)-max(a,b,c))
print(max(a,b,c))

-- ERROR:
File "XXXX", line 6
    print ((a+b+c)-min(a,b,c)-max(a,b,c))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:48:46) 
-- CODE:
a=int(input("valor"))
b=int(input("valor"))
c=int(input("valor"))

print (min(a,b,c))
print ((a+b+c)-min(a,b,c)-max(a,b,c))
print(max(a,b,c))

-- OUTPUT:
-2
0
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:49:02) 
-- CODE:
a=int(input("valor"))
b=int(input("valor"))
c=int(input("valor"))

print (min(a,b,c))
print ((a+b+c)-min(a,b,c)-max(a,b,c))
print(max(a,b,c))

-- EXECUTION TIME:
0.155202
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
